Fixed alignment and font-weight issues in sections 1-4

--- a/styles.css
+++ b/styles.css
@@ -13,39 +13,47 @@ div {
     background-color: #1F2937;
     height: 65px;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
+}
+
+.HeaderLinks{
+    display: flex;
+    gap: 30px;
+    justify-content: end;
+    margin-right: 125px;
 }
 
 .HeaderLink {
-    margin-top: 20px;
     height: 45px;
     color: #E5E7EB;
     font-size: 18px;
-    width: 200px;
-    align-self: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: auto;
 }
 
 #HeaderLogo {
-    margin-top: 20px;
-    margin-right: 500px;
+    display: flex;
+    align-items: center;
     height: 45px;
     font-size: 24px;
     color: #F9FAF8;
-    width: 200px;
-    align-self: flex-start;
+    margin-left: 125px;
+    font-weight: 900;
 }
 
 .Section1 {
     background-color: #1F2937;
     height: 500px;
-    padding-left: 125px;
-    display: grid;
-    grid-template-columns: 1fr 50%;
-    grid-gap: 20px;
+    display: flex;
     align-items: center;
-      }
+}
 
+.Subsection1Left{
+    margin-left: 125px;
+}
 
 #Title { 
     font-size: 48px;
@@ -83,6 +91,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 125px;
 }
 
 #Section2Title {
@@ -114,21 +123,22 @@ button {
 }
 
 .Square {
-    height: 150px;
-    width: 150px;
+    height: 160px;
+    width: 160px;
     border: #3882F6 solid 5px;
     border-radius: 25px;
 }
 
 .Subtext {
     height: 100px;
-    width: 175px;
+    width: 170px;
     color: #1F2937;
+    text-align: center;
 }
 
 .Section3 {
     background-color: #E5E7EB;
-    height: 500px;
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -141,54 +151,58 @@ button {
     font-weight: 100;
     font-style: italic;
     color: #1F2937;
+    margin-bottom: -100px;
+
 }
 
 #QuoteSource {
     width: 825px;
     font-size: 24px;
+    color: #1F2937;
+    text-align: end;
+    font-weight: bold;
+    margin-right: 100px;
 }
 
 .Section4 {
     background-color: #ffffff;
-    height: 500px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #BlueBoi {
+    width: 70%;
     background-color: #3882F6;
-    border-radius: 25px;
-    display: grid;
-    grid-template-columns: 1fr 50%;
-    grid-gap: 10px;
+    border-radius: 10px;
     align-items: center;
+    display: flex;
 }
 
 h4 {
     color: #E5E7EB;
-    height: 50px;
-    width: 300px;
-    border: red solid 2px;
-    grid-column: 1;
 }
 
 #BlueButton {
     height: 40px;
     width: 125px;
-    margin-top: 50px;
-    margin-bottom: 50px;
     background-color: #3882F6;
     border: #F9FAF8 solid 3px;
     color: #E5E7EB;
     font-size: 18px;
     border-radius: 10px;
     box-shadow: none;
+    margin-right: 100px;
+}
+
+#section4Content{
+    margin-left: 100px;
 }
 
 #BlueP {
     color: #E5E7EB;
-    height: 50px;
-    width: 400px;
-    border: red solid 2px;
-    grid-column: 1;
+
 }
 
 .Footer {
